fix: fix links alignment in the navbar
Update gatsby and dependencies to the latest 5.8.1; remove non existent API from gatsby-browser and
gatsby-ssr

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -297,6 +297,9 @@ Navbar
 .languages img {
   width: 30px;
 }
+.link-icon {
+  padding-top: 11px;
+}
 /*
 =============== 
 Sidebar
